--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-    "name": "heavy-krausen",
-    "main": "server.js",
-
-    "dependencies": {
-        "express": "~4.0.0",
-        "socket.io": "latest",
-        "deployd": "latest"
-    }
+  "name": "heavy-krausen",
+  "version": "0.1.0",
+  "description": "A Homebrew API",
+  "author": "Nick Sporich <nsporich@gmail.com>",
+  "main": "server.js",
+  "dependencies": {
+      "express": "~4.0.0",
+      "socket.io": "latest",
+      "deployd": "latest"
+  }
 }
