--- a/package.json
+++ b/package.json
@@ -4,9 +4,28 @@
   "description": "A Homebrew API",
   "author": "Nick Sporich <nsporich@gmail.com>",
   "main": "server.js",
+
   "dependencies": {
       "express": "~4.0.0",
       "socket.io": "latest",
       "deployd": "latest"
+  },
+
+  "devDependencies": {
+  "grunt": "~0.4.4",
+  "grunt-contrib-concat": "latest",
+  "grunt-contrib-cssmin": "^0.12.2",
+  "grunt-contrib-jshint": "latest",
+  "grunt-contrib-sass": "^0.9.2",
+  "grunt-contrib-uglify": "latest",
+  "grunt-contrib-watch": "latest",
+  "grunt-express": "~1.4.1",
+  "jshint-stylish": "latest",
+  "load-grunt-tasks": "^3.1.0",
+  "node-bourbon": "~1.2.3",
+  "node-neat": "~1.4.2",
+  "node-refills": "~1.0.1",
+  "sass": "~0.5.0"
   }
+
 }
