--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "dependencies": {
     "express": "~4.0.0",
     "socket.io": "latest",
-    "deployd": "latest"
+    "deployd": "latest",
+    "dpd-passport": "^0.3.4"
   },
   "devDependencies": {
-    "dpd-passport": "^0.3.4",
     "grunt": "~0.4.4",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-cssmin": "^0.12.2",
@@ -18,6 +18,8 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
+    "grunt-nodemon": "~0.3.0",
+    "grunt-concurrent": "~0.5.0",
     "grunt-express": "~1.4.1",
     "jshint-stylish": "latest",
     "load-grunt-tasks": "^3.1.0",
